 ** `.tabset` becomes `.tabs`
 ** `.tabs` becomes `.tablist`
 ** `.tab-panel` becomes `.tabpanel`
 ** `.is-active` for selected tab becomes `.is-selected`
 ** `.is-active` for visible panel becomes `:not(.is-hidden)`
* Assign ARIA attributes in JavaScript (i.e., role, aria-controls, aria-hidden) where recommended (#38)

== 1.0.0-alpha.10 (2022-12-08) - @mojavelinux

=== Fixed

* Remove overflow styles on tab pane as it's not universal
* Make a best effort to constrain the width of an overflowing table

=== Details

{url-repo}/releases/tag/v1.0.0-alpha.10[git tag] | {url-repo}/compare/v1.0.0-alpha.9\...v1.0.0-alpha.10[full diff]

== 1.0.0-alpha.9 (2022-12-07) - @mojavelinux

=== Changed

* Assign `tab` role to each item in tab list
* Apply border and padding to tab pane element instead of its parent
* Remove fixed height on tab element; using padding instead
* Use more subtle color scheme for border and background colors on tabs

=== Fixed

* Configure overflow content in tab panel to scroll horizontally
* Set background on tabs properly so background does not bleed through

=== Details

{url-repo}/releases/tag/v1.0.0-alpha.9[git tag] | {url-repo}/compare/v1.0.0-alpha.8\...v1.0.0-alpha.9[full diff]

== 1.0.0-alpha.8 (2022-11-30) - @mojavelinux

=== Fixed

* Sync tab selection on hash change (#32)
* Lock position of content when synchronizing tab selection (#34)
* Remove bottom margin from last block in tab pane for the most common cases

=== Details

{url-repo}/releases/tag/v1.0.0-alpha.8[git tag] | {url-repo}/compare/v1.0.0-alpha.7\...v1.0.0-alpha.8[full diff]

== 1.0.0-alpha.7 (2022-11-28) - @mojavelinux

=== Added

* In tabs script, add `tab` class to tab element
* Sync tab selection across tabs blocks if `sync` option is set on tabs block or `tabs-sync-option` attribute is set on document (#28)
* Delist tabs block from sync if `nosync` option is set on block (#28)

=== Changed
